# crew_agents

./: .gitignore  Llama2ModelFile  MixtralModelFile  README.md  agents.py  gitignore  llm_connection.py  main.py  pyproject.toml  requirements.txt  setup.sh  tasks.py
