[tool.poetry]
name = "crew-agents"
version = "0.1.0"
description = "CrewAI test and development for learning"
authors = ["o0grip0o <ossie.bodero@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
langchain = "^0.1.16"
crewai = "^0.28.8"
crewai-tools = "^0.1.7"
langchain-community = "^0.0.34"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
